# clinipub

./: CONTRIBUTING.md  README.md  pyproject.toml  secure_audit.py
.github/workflows/: pypi-publish.yml  security_scan.yml  tests-suite.yml
examples/: pipeline.py
src/clinipub/: __init__.py  assembler.py  bivariate_stats.py  missingness.py  pipeline.py  stats_engine.py
src/clinipub/exporters/: __init__.py  docx_writer.py  html_styler.py
tests/: test_assembler.py  test_bivariate_stats.py  test_exporters.py  test_missingness.py  test_pipeline.py  test_stats_engine.py
